--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
 
       <div class="two-thirds column" style="margin-top: 10%;">
-        <p>Welcome to Yonsei CS theory student group webpage!</p>
+        <p>Welcome to Yonsei CS theory student group's webpage!</p>
         
         <!-- <hr/> -->
         <!-- <h3>Regular Seminar</h3> -->
