--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
       </div>
 
       <div class="two-thirds column" style="margin-top: 10%;">
-        <p>Welcome to Yonsei CS theory student group's webpage!</p>
+        <p>Welcome to Yonsei CS theory student group's webpage! </p>
+        
+        <p>We aim at exploring various aspects of theoretical computer science while providing a social community for graduate (or undergraduate) students who are working on (or interested in) theoretical computer science in (or out of) Yonsei University.</p>
+
+        <p>Any questions are welcomed to yonsei.cs.theory.students {at} gmail {dot} com.</p>
         
         <!-- <hr/> -->
         <!-- <h3>Regular Seminar</h3> -->
