--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         
         <p>We aim at exploring various aspects of theoretical computer science while providing a social community for graduate (or undergraduate) students who are working on (or interested in) theoretical computer science in (or out of) Yonsei University.</p>
 
-        <p>Any questions are welcomed to yonsei.cs.theory.students {at} gmail {dot} com.</p>
+        <p>Any questions are welcomed to yonsei.cs.theory.students@gmail.com.</p>
         
         <!-- <hr/> -->
         <!-- <h3>Regular Seminar</h3> -->
