--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
           <li>Week 1. VCG mechanism</li>
             <ul>
               <li>Speaker: Changyeol Lee (Yonsei University)</li>
+              <li>Reference: <a href="202301/01.vcg-mechanism.html" target="_blank">[slides]</a></li>
             </ul>
 
           <li>Week 2. </li>
