--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <ul>
           <li>Week 1. VCG mechanism</li>
             <ul>
-              <li>Speaker: Changyeol Lee (Yonsei University)</li>
-              <li>Reference: <a href="202301/01.vcg-mechanism.html" target="_blank">[slides]</a></li>
+              <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
+              <li>Reference: <a href="202301/01.vcg-mechanism.html" target="_blank">[slides]</a>, <a href="http://timroughgarden.org/f16/l/l15.pdf" target="_blank">[1]</a>, <a href="https://gazelle-and-cs.tistory.com/97" target="_blank">[2]</a></li>
             </ul>
 
           <li>Week 2. </li>
