--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
               <li>Reference: <a href="202301/01.vcg-mech.pdf" target="_blank">[slides]</a>, <a href="http://timroughgarden.org/f16/l/l15.pdf" target="_blank">[1]</a>, <a href="https://gazelle-and-cs.tistory.com/97" target="_blank">[2]</a></li>
             </ul>
 
-          <li>Week 2. </li>
+          <li>Week 2. Optimal mechanism design for the seller's auction design problem</li>
+            <ul>
+              <li>Speaker: Sungmin Kim (Yonsei University)</li>
+              <li>Reference: <a href="https://www.ssc.wisc.edu/~dquint/econ899%20S2018/lecture%203.pdf" target="_blank">[1]</a></li>
+            </ul>
 
           <li>Week 3. </li>
 
