--- a/index.html
+++ b/index.html
@@ -68,9 +68,19 @@
               <li>Reference: <a href="202301/02.myerson.pdf" target="_blank">[note]</a>, <a href="https://doi.org/10.1287/moor.6.1.58" target="_blank">[1]</a>, <a href="https://www.ssc.wisc.edu/~dquint/econ899%20S2018/lecture%203.pdf" target="_blank">[2]</a></li>
             </ul>
 
-          <li>Week 3. </li>
+          <li>Week 3. Auction vs negotiation</li>
+            <ul>
+              <li>Speaker: JaeHyeok Kwak (Yonsei University)</li>
+              <li>Reference: <a href="https://www.jstor.org/stable/2118262" target="_blank">[1]</a></li>
+            </ul>
 
-          <li>Week 4. </li>
+          <li>Week 4. Hungarian algorithm through the lens of economics
+            <ul>
+              <li>Junior seminar</li>
+              <li>Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</li>
+              <li>Reference: <a href="https://gazelle-and-cs.tistory.com/95" target="_blank">[1]</a></li>
+            </ul>
+          </li>
 
           <li>Week 5. </li>
 
