--- a/index.html
+++ b/index.html
@@ -82,27 +82,79 @@
             </ul>
           </li>
 
-          <li>Week 5. </li>
+          <li>Week 5. TBA
+            <!-- Simple economics of optimal auction -->
+            <!-- <ul>
+              <li>Speaker: TBA</li>
+              <li>Reference: <a href="https://doi.org/10.1086/261643" target="_blank">[1]</a></li>
+            </ul> -->
+          </li>
 
-          <li>Week 6. </li>
+          <li>Week 6. TBA
+            <!-- Price of anarchy for auction revenue -->
+            <!-- <ul>
+              <li>Speaker: TBA</li>
+              <li>Reference: <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
+            </ul> -->
+          </li>
 
-          <li>Week 7. </li>
+          <li>Week 7. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
           <li>Week 8. Midterm week</li>
 
-          <li>Week 9. </li>
+          <li>Week 9. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
-          <li>Week 10. </li>
+          <li>Week 10. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
-          <li>Week 11. </li>
+          <li>Week 11. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
-          <li>Week 12. </li>
+          <li>Week 12. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
-          <li>Week 13. </li>
+          <li>Week 13. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
-          <li>Week 14. </li>
+          <li>Week 14. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
-          <li>Week 15. </li>
+          <li>Week 15. TBA
+            <!-- <ul>
+              <li>Speaker: </li>
+              <li>Reference: </li>
+            </ul> -->
+          </li>
 
           <li>Week 16. Final week</li>
 
