--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li>Week 3. Auction vs negotiation</li>
             <ul>
               <li>Speaker: JaeHyeok Kwak (Yonsei University)</li>
-              <li>Reference: <a href="https://www.jstor.org/stable/2118262" target="_blank">[1]</a></li>
+              <li>Reference: <a href="https://www.jstor.org/stable/2118262" target="_blank">[1]</a>, <a href="https://theory.stanford.edu/~tim/f13/l/l6.pdf" target="_blank">[2]</a></li>
             </ul>
 
           <li>Week 4. Hungarian algorithm through the lens of economics
