--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <li>Week 1. VCG mechanism</li>
             <ul>
               <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
-              <li>Reference: <a href="202301/01.vcg-mech.pdf" target="_blank">[slides]</a>, <a href="http://timroughgarden.org/f16/l/l15.pdf" target="_blank">[1]</a>, <a href="https://gazelle-and-cs.tistory.com/97" target="_blank">[2]</a></li>
+              <li>Reference: <a href="202301/01.vcg-mech.pdf" target="_blank">[slide]</a>, <a href="http://timroughgarden.org/f16/l/l15.pdf" target="_blank">[1]</a>, <a href="https://gazelle-and-cs.tistory.com/97" target="_blank">[2]</a></li>
             </ul>
 
           <li>Week 2. Optimal mechanism design for the seller's auction design problem</li>
@@ -71,14 +71,14 @@
           <li>Week 3. Auction vs negotiation</li>
             <ul>
               <li>Speaker: JaeHyeok Kwak (Yonsei University)</li>
-              <li>Reference: <a href="https://www.jstor.org/stable/2118262" target="_blank">[1]</a>, <a href="https://theory.stanford.edu/~tim/f13/l/l6.pdf" target="_blank">[2]</a></li>
+              <li>Reference: <a href="202301/03.auc-v-neg.pdf" target="_blank">[slide]</a>, <a href="https://www.jstor.org/stable/2118262" target="_blank">[1]</a>, <a href="https://theory.stanford.edu/~tim/f13/l/l6.pdf" target="_blank">[2]</a></li>
             </ul>
 
           <li>Week 4. Hungarian algorithm through the lens of economics
             <ul>
               <li>Junior seminar</li>
               <li>Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</li>
-              <li>Reference: <a href="https://gazelle-and-cs.tistory.com/95" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202301/04.hungarian.pdf" target="_blank">[slide]</a>, <a href="https://gazelle-and-cs.tistory.com/95" target="_blank">[1]</a></li>
             </ul>
           </li>
 
