--- a/index.html
+++ b/index.html
@@ -82,12 +82,11 @@
             </ul>
           </li>
 
-          <li>Week 5. TBA
-            <!-- Simple economics of optimal auction -->
-            <!-- <ul>
-              <li>Speaker: TBA</li>
+          <li>Week 5. Reinterpretation of Optimal Auctions
+            <ul>
+              <li>Speaker: Joonghyuk Hahn</li>
               <li>Reference: <a href="https://doi.org/10.1086/261643" target="_blank">[1]</a></li>
-            </ul> -->
+            </ul>
           </li>
 
           <li>Week 6. TBA
