--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </ul>
           </li>
 
-          <li>Week 5. Reinterpretation of Optimal Auctions
+          <li>Week 5. Reinterpretation of optimal auctions
             <ul>
               <li>Speaker: Joonghyuk Hahn</li>
               <li>Reference: <a href="https://doi.org/10.1086/261643" target="_blank">[1]</a></li>
