--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
           <li>Week 5. Reinterpretation of optimal auctions
             <ul>
-              <li>Speaker: Joonghyuk Hahn</li>
+              <li>Speaker: Joonghyuk Hahn (Yonsei University)</li>
               <li>Reference: <a href="https://doi.org/10.1086/261643" target="_blank">[1]</a></li>
             </ul>
           </li>
