--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <li>Week 5. Reinterpretation of optimal auctions
             <ul>
               <li>Speaker: Joonghyuk Hahn (Yonsei University)</li>
-              <li>Reference: <a href="https://doi.org/10.1086/261643" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202301/05.opt-auc-reint.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1086/261643" target="_blank">[1]</a></li>
             </ul>
           </li>
 
