--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
             </ul>
           </li>
 
-          <li>Week 6. TBA
-            <!-- Price of anarchy for auction revenue -->
-            <!-- <ul>
-              <li>Speaker: TBA</li>
+          <li>Week 6. Price of anarchy for auction revenue
+            <ul>
+              <li>Speaker: <a href="https://leejseo.com/about" target="_blank">Jongseo Lee</a> (KAIST)</li>
               <li>Reference: <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
-            </ul> -->
+            </ul>
           </li>
 
           <li>Week 7. TBA
