--- a/index.html
+++ b/index.html
@@ -89,26 +89,28 @@
             </ul>
           </li>
 
-          <li>Week 6. Welfare and revenue at the first-price auction
+          <li>Week 6. Recapitualation of optimal auctions
             <ul>
-              <li>Speaker: <a href="https://leejseo.com/about" target="_blank">Jongseo Lee</a> (KAIST)</li>
-              <li>Reference: <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
+              <li>Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</li>
+              <!-- <li>Reference: </li> -->
             </ul>
           </li>
 
           <li>Week 7. TBA
-            <!-- <ul>
+            <!-- Algorithmic pricing via virtual valuations
+            <ul>
               <li>Speaker: </li>
-              <li>Reference: </li>
+              <li>Reference: <a href="https://doi.org/10.1145/1250910.1250946" target="_blank">[1]</a></li>
             </ul> -->
           </li>
 
           <li>Week 8. Midterm week</li>
 
           <li>Week 9. TBA
-            <!-- <ul>
+            <!-- Multi-parameter mechanism design and sequential posted pricing
+            <ul>
               <li>Speaker: </li>
-              <li>Reference: </li>
+              <li>Reference:<a href="https://doi.org/10.1145/1806689.1806733" target="_blank">[1]</a> </li>
             </ul> -->
           </li>
 
