--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </ul>
           </li>
 
-          <li>Week 6. Recapitualation of optimal auctions
+          <li>Week 6. Recapitulation of optimal auctions
             <ul>
               <li>Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</li>
               <!-- <li>Reference: </li> -->
