--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           <li>Week 6. Recapitulation of optimal auctions
             <ul>
               <li>Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</li>
-              <!-- <li>Reference: </li> -->
+              <li>Reference: <a href="https://gazelle-and-cs.tistory.com/113" target="_blank">[1]</a></li>
             </ul>
           </li>
 
