--- a/index.html
+++ b/index.html
@@ -96,12 +96,11 @@
             </ul>
           </li>
 
-          <li>Week 7. TBA
-            <!-- Algorithmic pricing via virtual valuations
+          <li>Week 7. Approximate algorithmic pricing via virtual valuations
             <ul>
-              <li>Speaker: </li>
+              <li>Speaker: SeungYeop Baik (Yonsei University)</li>
               <li>Reference: <a href="https://doi.org/10.1145/1250910.1250946" target="_blank">[1]</a></li>
-            </ul> -->
+            </ul>
           </li>
 
           <li>Week 8. Midterm week</li>
