--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <li>Week 7. Approximate algorithmic pricing via virtual valuations
             <ul>
               <li>Speaker: SeungYeop Baik (Yonsei University)</li>
-              <li>Reference: <a href="./202301/07.pricing_virt_val.pdf">[1]</a>, <a href="https://doi.org/10.1145/1250910.1250946" target="_blank">[2]</a></li>
+              <li>Reference: <a href="./202301/07.pricing_virt_val.pdf">[slide]</a>, <a href="https://doi.org/10.1145/1250910.1250946" target="_blank">[1]</a></li>
             </ul>
           </li>
 
