--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
           <li>Week 2. Optimal mechanism design for the seller's auction design problem</li>
             <ul>
-              <li>Speaker: Sungmin Kim (Yonsei University)</li>
+              <li>Speaker: <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University)</li>
               <li>Reference: <a href="202301/02.myerson.pdf" target="_blank">[note]</a>, <a href="https://doi.org/10.1287/moor.6.1.58" target="_blank">[1]</a>, <a href="https://www.ssc.wisc.edu/~dquint/econ899%20S2018/lecture%203.pdf" target="_blank">[2]</a></li>
             </ul>
 
