--- a/index.html
+++ b/index.html
@@ -105,12 +105,11 @@
 
           <li>Week 8. Midterm week</li>
 
-          <li>Week 9. TBA
-            <!-- Multi-parameter mechanism design and sequential posted pricing
+          <li>Week 9.  Multi-parameter mechanism design and sequential posted pricing
             <ul>
-              <li>Speaker: </li>
+              <li>Speaker: Hyunjoon Cheon (Yonsei University) </li>
               <li>Reference:<a href="https://doi.org/10.1145/1806689.1806733" target="_blank">[1]</a> </li>
-            </ul> -->
+            </ul>
           </li>
 
           <li>Week 10. TBA
