--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <li>Week 9.  Multi-parameter mechanism design and sequential posted pricing
             <ul>
               <li>Speaker: Hyunjoon Cheon (Yonsei University) </li>
-              <li>Reference:<a href="https://doi.org/10.1145/1806689.1806733" target="_blank">[1]</a> </li>
+              <li>Reference: <a href="202301/09.mult-param-mech.pdf" target="_blank">[slide]</a>, <a herf="https://doi.org/10.1145/1806689.1806733" target="_blank">[1]</a> </li>
             </ul>
           </li>
 
