--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <!-- <h3>Regular Seminar</h3> -->
         
         <h4>Spring 2023, Mechanism Design</h4>
+        <p>Steered by <a href="https://yonghoshin36.github.io" taget="_blank">Yongho Shin</a> (Yonsei University) and Hyunjoon Cheon (Yonsei University)</p>
         <ul>
           <li>Week 1. VCG mechanism</li>
             <ul>
