--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <li>Week 9.  Multi-parameter mechanism design and sequential posted pricing
             <ul>
               <li>Speaker: Hyunjoon Cheon (Yonsei University) </li>
-              <li>Reference: <a href="202301/09.mult-param-mech.pdf" target="_blank">[slide]</a>, <a herf="https://doi.org/10.1145/1806689.1806733" target="_blank">[1]</a> </li>
+              <li>Reference: <a href="202301/09.mult-param-mech.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1145/1806689.1806733" target="_blank">[1]</a></li>
             </ul>
           </li>
 
@@ -117,7 +117,7 @@
             <!-- Price of anarchy for auction revenue
             <ul>
               <li>Speaker: </li>
-              <li>Reference:<a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a> </li>
+              <li>Reference: <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
             </ul> -->
           </li>
 
@@ -125,7 +125,7 @@
             <!-- Bayesian combinatorial auction
             <ul>
               <li>Speaker: </li>
-              <li>Reference:<a href="https://doi.org/10.1145/2835172" target="_blank">[1]</a> </li>
+              <li>Reference: <a href="https://doi.org/10.1145/2835172" target="_blank">[1]</a></li>
             </ul> -->
           </li>
 
