--- a/index.html
+++ b/index.html
@@ -113,12 +113,10 @@
             </ul>
           </li>
 
-          <li>Week 10. TBA
-            <!-- Price of anarchy for auction revenue
+          <li>Week 10. Price of anarchy for auction revenue
             <ul>
-              <li>Speaker: </li>
               <li>Reference: <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
-            </ul> -->
+            </ul>
           </li>
 
           <li>Week 11. TBA
