--- a/index.html
+++ b/index.html
@@ -108,14 +108,15 @@
 
           <li>Week 9.  Multi-parameter mechanism design and sequential posted pricing
             <ul>
-              <li>Speaker: Hyunjoon Cheon (Yonsei University) </li>
+              <li>Speaker: Hyunjoon Cheon (Yonsei University)</li>
               <li>Reference: <a href="202301/09.mult-param-mech.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1145/1806689.1806733" target="_blank">[1]</a></li>
             </ul>
           </li>
 
           <li>Week 10. Price of anarchy for auction revenue
             <ul>
-              <li>Reference: <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
+              <li>Speaker: Jaehyun Koo (KAIST)</li>
+              <li>Reference: <a href="202301/10.pao.pdf">[slide]</a>, <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
             </ul>
           </li>
 
