--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <li>Week 10. Price of anarchy for auction revenue
             <ul>
               <li>Speaker: Jaehyun Koo (KAIST)</li>
-              <li>Reference: <a href="202301/10.pao.pdf">[slide]</a>, <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202301/10.pao.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1145/2600057.2602878" target="_blank">[1]</a></li>
             </ul>
           </li>
 
