week 11 (and more)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         <p>Any questions are welcomed to yonsei.cs.theory.students@gmail.com.</p>
         
-        <!-- <hr/> -->
+        <hr/>
         <!-- <h3>Regular Seminar</h3> -->
         
         <h4>Spring 2023, Mechanism Design</h4>
@@ -120,37 +120,41 @@
             </ul>
           </li>
 
-          <li>Week 11. TBA
-            <!-- Bayesian combinatorial auction
+          <li>Week 11. Bayesian-Nash equilibrium of combinatorial auction
             <ul>
-              <li>Speaker: </li>
+              <li>Speaker: <a href="https://tamref.github.io/about/" target="_blank">Changki Yun</a> (Seoul National University)</li>
               <li>Reference: <a href="https://doi.org/10.1145/2835172" target="_blank">[1]</a></li>
-            </ul> -->
+            </ul>
           </li>
 
           <li>Week 12. TBA
-            <!-- <ul>
+            <!--
+            <ul>
+              <li>Junior seminar</li>
               <li>Speaker: </li>
               <li>Reference: </li>
             </ul> -->
           </li>
 
           <li>Week 13. TBA
-            <!-- <ul>
+            <!-- Bayesian and randomized clock auctions
+            <ul>
               <li>Speaker: </li>
               <li>Reference: </li>
             </ul> -->
           </li>
 
           <li>Week 14. TBA
-            <!-- <ul>
+            <!-- Learning-Augmented Mechanism Design: Leveraging Predictions for Facility Location
+            <ul>
               <li>Speaker: </li>
               <li>Reference: </li>
             </ul> -->
           </li>
 
           <li>Week 15. TBA
-            <!-- <ul>
+            <!-- Fixed-price approximations in bilateral trade
+            <ul>
               <li>Speaker: </li>
               <li>Reference: </li>
             </ul> -->
