--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <li>Week 11. Bayesian-Nash equilibrium of combinatorial auction
             <ul>
               <li>Speaker: <a href="https://tamref.github.io/about/" target="_blank">Changki Yun</a> (Seoul National University)</li>
-              <li>Reference: <a href="https://doi.org/10.1145/2835172" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202301/11.bayes-comb-auc.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1145/2835172" target="_blank">[1]</a></li>
             </ul>
           </li>
 
