--- a/index.html
+++ b/index.html
@@ -127,13 +127,12 @@
             </ul>
           </li>
 
-          <li>Week 12. TBA
-            <!--
+          <li>Week 12. Non-computability in human consciousness
             <ul>
               <li>Junior seminar</li>
-              <li>Speaker: </li>
-              <li>Reference: </li>
-            </ul> -->
+              <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
+              <li>Reference: <a href="https://en.wikipedia.org/wiki/The_Emperor's_New_Mind" target="_blank">[1]</a>, <a href="https://en.wikipedia.org/wiki/Shadows_of_the_Mind" target="_blank">[2]</a></li>
+            </ul>
           </li>
 
           <li>Week 13. TBA
