--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             <ul>
               <li>Junior seminar</li>
               <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
-              <li>Reference: <a href="https://en.wikipedia.org/wiki/The_Emperor's_New_Mind" target="_blank">[1]</a>, <a href="https://en.wikipedia.org/wiki/Shadows_of_the_Mind" target="_blank">[2]</a></li>
+              <li>Reference: <a href="202301/12.non-comp-cons.pdf" target="_blank">[slide]</a>, <a href="https://en.wikipedia.org/wiki/The_Emperor's_New_Mind" target="_blank">[1]</a>, <a href="https://en.wikipedia.org/wiki/Shadows_of_the_Mind" target="_blank">[2]</a></li>
             </ul>
           </li>
 
