--- a/index.html
+++ b/index.html
@@ -135,12 +135,11 @@
             </ul>
           </li>
 
-          <li>Week 13. TBA
-            <!-- Bayesian and randomized clock auctions
+          <li>Week 13. Bayesian and randomized clock auctions
             <ul>
-              <li>Speaker: </li>
-              <li>Reference: </li>
-            </ul> -->
+              <li>Speaker: Sicheol Sung (Yonsei University)</li>
+              <li>Reference: <a href="https://doi.org/10.1145/3490486.3538247" target="_blank">[1]</a></li>
+            </ul>
           </li>
 
           <li>Week 14. TBA
@@ -167,7 +166,7 @@
     </div> <!-- End of row -->
     
     <div class="row" style="margin-top: 10%; margin-bottom: 10%;">
-      <p>Built with <a href="http://getskeleton.com/" target="_blank">Skeleton</a>. </p>
+      <p>Built with <a href="http://getskeleton.com/" target="_blank">Skeleton</a> </p>
     </div>
 
   </div> <!-- End of container -->
