--- a/index.html
+++ b/index.html
@@ -142,12 +142,11 @@
             </ul>
           </li>
 
-          <li>Week 14. TBA
-            <!-- Learning-Augmented Mechanism Design: Leveraging Predictions for Facility Location
+          <li>Week 14. Learning-augmented mechanism design
             <ul>
-              <li>Speaker: </li>
-              <li>Reference: </li>
-            </ul> -->
+              <li>Speaker: Gukryeol Lee (Yonsei University)</li>
+              <li>Reference: <a href="https://doi.org/10.1145/3490486.3538306" target="_blank">[1]</a>, <a href="https://gazelle-and-cs.tistory.com/107" target="_blank">[2]</a> </li>
+            </ul>
           </li>
 
           <li>Week 15. TBA
