--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <li>Week 13. Bayesian and randomized clock auctions
             <ul>
               <li>Speaker: Sicheol Sung (Yonsei University)</li>
-              <li>Reference: <a href="https://doi.org/10.1145/3490486.3538247" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202301/13.bayes-clock-auc.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1145/3490486.3538247" target="_blank">[1]</a></li>
             </ul>
           </li>
 
