--- a/index.html
+++ b/index.html
@@ -145,16 +145,15 @@
           <li>Week 14. Learning-augmented mechanism design
             <ul>
               <li>Speaker: Gukryeol Lee (Yonsei University)</li>
-              <li>Reference: <a href="https://doi.org/10.1145/3490486.3538306" target="_blank">[1]</a>, <a href="https://gazelle-and-cs.tistory.com/107" target="_blank">[2]</a> </li>
+              <li>Reference: <a href="202301/14.learn-aug-mech.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1145/3490486.3538306" target="_blank">[1]</a>, <a href="https://gazelle-and-cs.tistory.com/107" target="_blank">[2]</a> </li>
             </ul>
           </li>
 
-          <li>Week 15. TBA
-            <!-- Fixed-price approximations in bilateral trade
+          <li>Week 15. Fixed-price approximations in bilateral trade
             <ul>
-              <li>Speaker: </li>
-              <li>Reference: </li>
-            </ul> -->
+              <li>Speaker: Sunghyeon Jo (Seoul National University)</li>
+              <li>Reference: <a href="https://doi.org/10.1137/1.9781611977073.115" target="_blank">[1]</a></li>
+            </ul>
           </li>
 
           <li>Week 16. Final week</li>
