--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <li>Week 15. Fixed-price approximations in bilateral trade
             <ul>
               <li>Speaker: Sunghyeon Jo (Seoul National University)</li>
-              <li>Reference: <a href="https://doi.org/10.1137/1.9781611977073.115" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202301/15.approx-bilat-trade.pdf" target="_blank">[slide]</a>, <a href="https://doi.org/10.1137/1.9781611977073.115" target="_blank">[1]</a></li>
             </ul>
           </li>
 
