--- a/index.html
+++ b/index.html
@@ -52,8 +52,30 @@
         <p>Any questions are welcomed to yonsei.cs.theory.students@gmail.com.</p>
         
         <hr/>
-        <!-- <h3>Regular Seminar</h3> -->
+        <h4>Fall 2023, Quantum Computing</h4>
+        <p>Steered by SeungYeop Baik (Yonsei University), Sicheol Sung (Yonsei University), and <a href="https://yonghoshin36.github.io" taget="_blank">Yongho Shin</a> (Yonsei University)</p>
         
+        <ul>
+          <li>Week 1. TBA</li>
+          <li>Week 2. TBA</li>
+          <li>Week 3. TBA</li>
+          <li>Week 4. TBA</li>          
+          <li>Week 5. TBA</li>
+          <li>Week 6. TBA</li>
+          <li>Week 7. TBA</li>
+          <li>Week 8. Midterm week</li>
+          <li>Week 9. TBA</li>
+          <li>Week 10. TBA</li>
+          <li>Week 11. TBA</li>
+          <li>Week 12. TBA</li>
+          <li>Week 13. TBA</li>
+          <li>Week 14. TBA</li>
+          <li>Week 15. TBA</li>
+          <li>Week 16. Final week</li>
+        </ul>        
+        <hr/>
+        <!-- <h3>Regular Seminar</h3> -->
+
         <h4>Spring 2023, Mechanism Design</h4>
         <p>Steered by <a href="https://yonghoshin36.github.io" taget="_blank">Yongho Shin</a> (Yonsei University) and Hyunjoon Cheon (Yonsei University)</p>
         <ul>
