--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <hr/>
         <h4>Fall 2023, Quantum Computing</h4>
-        <p>Steered by SeungYeop Baik (Yonsei University), Sicheol Sung (Yonsei University), and <a href="https://yonghoshin36.github.io" taget="_blank">Yongho Shin</a> (Yonsei University)</p>
+        <p>Steered by SeungYeop Baik (Yonsei University), Sicheol Sung (Yonsei University), and <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</p>
         
         <ul>
           <li>Week 1. TBA</li>
@@ -77,7 +77,7 @@
         <!-- <h3>Regular Seminar</h3> -->
 
         <h4>Spring 2023, Mechanism Design</h4>
-        <p>Steered by <a href="https://yonghoshin36.github.io" taget="_blank">Yongho Shin</a> (Yonsei University) and Hyunjoon Cheon (Yonsei University)</p>
+        <p>Steered by <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University) and Hyunjoon Cheon (Yonsei University)</p>
         <ul>
           <li>Week 1. VCG mechanism</li>
             <ul>
