--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         <p>Steered by SeungYeop Baik (Yonsei University), Sicheol Sung (Yonsei University), and <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</p>
         
         <ul>
-          <li>Week 1. TBA</li>
+          <li>Week 1. Cancelled</li>
           <li>Week 2. TBA</li>
           <li>Week 3. TBA</li>
-          <li>Week 4. TBA</li>          
+          <li>Week 4. Cancelled (Chuseok)</li>          
           <li>Week 5. TBA</li>
           <li>Week 6. TBA</li>
           <li>Week 7. TBA</li>
