--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
         <ul>
           <li>Week 1. Cancelled</li>
           <li>Week 2. TBA</li>
-          <li>Week 3. TBA</li>
-          <li>Week 4. Cancelled (Chuseok)</li>          
-          <li>Week 5. TBA</li>
+          <li>Week 3. Grover's algorithm</li>
+            <ul>
+              <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
+              <li>Reference: <a href="202302/02.grover.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/bswe0GF8Ofg" target="_blank">[video]</a>, <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a></li>
+            </ul>
+          <li>Week 4. TBA</li>          
+          <li>Week 5. Cancelled (Chuseok)</li>
           <li>Week 6. TBA</li>
           <li>Week 7. TBA</li>
           <li>Week 8. Midterm week</li>
