--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
           <li>Week 3. Grover's algorithm</li>
             <ul>
               <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
-              <li>Reference: <a href="202302/02.grover.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/bswe0GF8Ofg" target="_blank">[video]</a>, <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202302/03.grover.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/bswe0GF8Ofg" target="_blank">[video]</a>, <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a></li>
             </ul>
-          <li>Week 4. TBA</li>          
-          <li>Week 5. Cancelled (Chuseok)</li>
+          <li>Week 4. Simon's algorithm & quantum Fourier transform</li>          
+            <ul>
+              <li>Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</li>
+              <li>Reference: <a href="202302/04.simon-qft.pdf" target="_blank">[note]</a>, <a href="https://youtube.com/live/FRJEWqO4PJg" target="_blank">[video]</a>, <a href="https://youtu.be/Mc9PHZ3H36M?si=l9k9RMOB-bKsAhUH" target="_blank">[1]</a></li>
+            </ul>
+          <li>Week 5. TBA</li>
           <li>Week 6. TBA</li>
           <li>Week 7. TBA</li>
           <li>Week 8. Midterm week</li>
