Add week 5 video

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <li>Week 5. Shor's algorithm</li>
             <ul>
               <li>Speaker: <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University)</li>
-              <li>Reference: <a href="202302/05.shor.pdf" target="_blank">[note]</a>
+              <li>Reference: <a href="202302/05.shor.pdf" target="_blank">[note]</a>, <a href="https://youtube.com/live/FBS0sPWCTuw" target="_blank">[video]</a>
             </ul>
           <li>Week 6. TBA</li>
           <li>Week 7. TBA</li>
