--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li>Week 3. Grover's algorithm</li>
             <ul>
               <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
-              <li>Reference: <a href="202302/03grover.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/bswe0GF8Ofg" target="_blank">[video]</a>, <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a></li>
+              <li>Reference: <a href="202302/03.grover.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/bswe0GF8Ofg" target="_blank">[video]</a>, <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a></li>
             </ul>
           <li>Week 4. Simon's algorithm & quantum Fourier transform</li>
             <ul>
