Add week 2 reference

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
           <li>Week 2. Introduction to quantum algorithm</li>
             <ul>
               <li>Speaker: SeungYeop Baik (Yonsei University)</li>
+              <li>Reference: <a href="202302/02.quantum-computing.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/9Nem8-Up4_I" target="_blank">[video]</a>
             </ul>
           <li>Week 3. Grover's algorithm</li>
             <ul>
