--- a/index.html
+++ b/index.html
@@ -91,7 +91,15 @@
                 <a href="https://javafxpert.github.io/grok-bloch/" target="_blank">[4]</a>
               </li>
             </ul>
-          <li>Week 7. TBA</li>
+          <li>Week 7. Quantum Finite State Automata</li>
+            <ul>
+              <li>Speaker: Sicheol Sung (Yonsei University)</li>
+              <li>
+                Reference:
+                <a href="202302/07.qfa.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/cfjw60TXfw8" target="_blank">[video]</a>,
+              </li>
+            </ul>
           <li>Week 8. Midterm week</li>
           <li>Week 9. TBA</li>
           <li>Week 10. TBA</li>
