--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <li>
                 Reference:
                 <a href="202302/07.qfa.pdf" target="_blank">[slide]</a>,
-                <a href="https://youtube.com/live/cfjw60TXfw8" target="_blank">[video]</a>,
+                <a href="https://youtube.com/live/cfjw60TXfw8" target="_blank">[video]</a>
               </li>
             </ul>
           <li>Week 8. Midterm week</li>
