--- a/index.html
+++ b/index.html
@@ -47,36 +47,82 @@
       <div class="two-thirds column" style="margin-top: 10%;">
         <p>Welcome to Yonsei CS theory student group's webpage! </p>
 
-        <p>We aim at exploring various aspects of theoretical computer science while providing a social community for graduate (or undergraduate) students who are working on (or interested in) theoretical computer science in (or out of) Yonsei University.</p>
+        <p>
+          We aim at exploring various aspects of theoretical computer science
+          while providing a social community for graduate (or undergraduate)
+          students who are working on (or interested in) theoretical computer
+          science in (or out of) Yonsei University.
+        </p>
 
-        <p>Any questions are welcomed to yonsei.cs.theory.students@gmail.com.</p>
+        <p>
+          Any questions are welcomed to
+          yonsei.cs.theory.students@gmail.com.
+        </p>
 
         <hr/>
         <h4>Fall 2023, Quantum Computing</h4>
-        <p>Steered by SeungYeop Baik (Yonsei University), Sicheol Sung (Yonsei University), and <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</p>
+        <p>
+          Steered by
+          SeungYeop Baik (Yonsei University),
+          Sicheol Sung (Yonsei University), and
+          <a href="https://yonghoshin36.github.io" target="_blank">
+            Yongho Shin
+          </a>
+          (Yonsei University)
+        </p>
 
         <ul>
           <li>Week 1. Cancelled</li>
           <li>Week 2. Introduction to quantum algorithm</li>
             <ul>
-              <li>Speaker: SeungYeop Baik (Yonsei University)</li>
-              <li>Reference: <a href="202302/02.quantum-computing.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/9Nem8-Up4_I" target="_blank">[video]</a>
+              <li>
+                Speaker:
+                SeungYeop Baik (Yonsei University)
+              </li>
+              <li>
+                Reference:
+                <a href="202302/02.quantum-computing.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/9Nem8-Up4_I" target="_blank">[video]</a>
+              </li>
             </ul>
           <li>Week 3. Grover's algorithm</li>
             <ul>
-              <li>Speaker: <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)</li>
-              <li>Reference: <a href="202302/03.grover.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/bswe0GF8Ofg" target="_blank">[video]</a>, <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a></li>
+              <li>
+                Speaker:
+                <a href="https://chang-yeol.github.io" target="_blank">Changyeol Lee</a> (Yonsei University)
+              </li>
+              <li>
+                Reference:
+                <a href="202302/03.grover.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/bswe0GF8Ofg" target="_blank">[video]</a>,
+                <a href="https://learn.microsoft.com/en-us/azure/quantum/concepts-grovers" target="_blank">[1]</a>
+              </li>
             </ul>
-          <li>Week 4. Simon's algorithm & quantum Fourier transform</li>
+          <li>Week 4. Simon's algorithm &amp; quantum Fourier transform</li>
             <ul>
-              <li>Speaker: <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)</li>
-              <li>Reference: <a href="202302/04.simon-qft.pdf" target="_blank">[note]</a>, <a href="https://youtube.com/live/FRJEWqO4PJg" target="_blank">[video]</a>, <a href="https://youtu.be/Mc9PHZ3H36M?si=l9k9RMOB-bKsAhUH" target="_blank">[1]</a></li>
+              <li>
+                Speaker:
+                <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
+              </li>
+              <li>
+                Reference:
+                <a href="202302/04.simon-qft.pdf" target="_blank">[note]</a>,
+                <a href="https://youtube.com/live/FRJEWqO4PJg" target="_blank">[video]</a>,
+                <a href="https://youtu.be/Mc9PHZ3H36M?si=l9k9RMOB-bKsAhUH" target="_blank">[1]</a>
+              </li>
             </ul>
           </li>
           <li>Week 5. Shor's algorithm</li>
             <ul>
-              <li>Speaker: <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University)</li>
-              <li>Reference: <a href="202302/05.shor.pdf" target="_blank">[slide]</a>, <a href="https://youtube.com/live/FBS0sPWCTuw" target="_blank">[video]</a>
+              <li>
+                Speaker:
+                <a href="https://renariodyne.github.io/" target="_blank">Sungmin Kim</a> (Yonsei University)
+              </li>
+              <li>
+                Reference:
+                <a href="202302/05.shor.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/FBS0sPWCTuw" target="_blank">[video]</a>
+              </li>
             </ul>
           <li>Week 6. Quantum basics (wrap-up)</li>
             <ul>
