--- a/index.html
+++ b/index.html
@@ -65,10 +65,7 @@
           Steered by
           SeungYeop Baik (Yonsei University),
           Sicheol Sung (Yonsei University), and
-          <a href="https://yonghoshin36.github.io" target="_blank">
-            Yongho Shin
-          </a>
-          (Yonsei University)
+          <a href="https://yonghoshin36.github.io" target="_blank">Yongho Shin</a> (Yonsei University)
         </p>
 
         <ul>
@@ -147,7 +144,15 @@
               </li>
             </ul>
           <li>Week 8. Midterm week</li>
-          <li>Week 9. TBA</li>
+          <li>Week 9. Computability of Quantum Devices</li>
+            <ul>
+              <li>Speaker: Hyunjoon Cheon (Yonsei University)</li>
+              <li>
+                Reference:
+                <a href="202302/09.computability.pdf" target="_blank">[slide]</a>,
+                <a href="https://youtube.com/live/Q8-UGu_OqBo" target="_blank">[video]</a>
+              </li>
+            </ul>
           <li>Week 10. TBA</li>
           <li>Week 11. TBA</li>
           <li>Week 12. TBA</li>
